Fix alignment when there is no cons in results

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
 }
 
 main {
+  margin-bottom: auto;
   width: 100%;
   height: fit-content;
   display: flex;
